# bin

./: .editorconfig  .gitignore  .pre-commit-config.yaml  2qr  ?  README.md  ai-img2txt  alarm  alarm-clock.oga  asciicast2gif  astrovim  bash-set-terminal-title  ci-pipeline-notify  ci-pipeline-notify-latest  clipboard  colonize  completion.bash  dnsexpire.py  edcom  felix-bash-history-backup  felix-bash-last-command  felix-bash-truecolor-test  felix-bluetooth-headset-audio-profile  felix-bluetooth-headset-profile  felix-boots  felix-bpm2ms  felix-caddyfile-fix-deprecated-args  felix-clipboard-paste-png  felix-clock  felix-compose-directories  felix-compose-valid  felix-cpu  felix-desktop-add-command  felix-desktop-add-named-chrome  felix-desktop-icon-browser  felix-dns-domain-available  felix-docker-build-context  felix-docker-compose-volumes-backup  felix-docker-compose-volumes-list  felix-docker-compose-volumes-restore  (+89 more)
