[project]
name = "felix-bin"
version = "0.1.0"
description = "/home/felix/bin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "dbus-python>=1.3.2",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
typeCheckingMode = "basic"  # basedpyright less strict
