[project]
name = "felix-bin"
version = "0.1.0"
description = "/home/felix/bin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.1.8",
  "libfelix[music]>=0.4.0",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
typeCheckingMode = "basic" # basedpyright less strict
